video tests: 3 answer choices are mandatory

--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -151,7 +151,7 @@
                            ng-model="nameSurvey" id="nameSurvey">
                     <hr>
 
-                    <h4>**Agregar Preguntas</h4>
+                    <h4>**Agregar Preguntas (Cada pregunta debe tener 3 respuestas)</h4>
                     <a href="" data-toggle="collapse" data-target="#helpQuestion">
                         <i class="fa fa-info-circle"> Ayuda</i>
                     </a>
