--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -84,7 +84,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn-lg btn-block btn-mzc" ng-click="saveVideo()">Guardar</button>
+                    <button type="submit" ng-disabled="isSavedVideo" class="btn-lg btn-block btn-mzc" ng-click="saveVideo()">Guardar</button>
                     <button type="button" class="btn-lg btn-block btn-mzc" data-dismiss="modal">Cancelar</button>
                 </div>
             </div>
