Se agrega fundionalidad de mostrar ayudas directamente cuando se crean videos y planes

--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -152,7 +152,7 @@
                     <hr>
 
                     <h4>**Agregar Preguntas (Cada pregunta debe tener 3 respuestas)</h4>
-                    <a href="" data-toggle="collapse" data-target="#helpQuestion">
+                    <a href="" data-toggle="collapse" data-target="#helpQuestion" id="helpQuestions">
                         <i class="fa fa-info-circle"> Ayuda</i>
                     </a>
                     <div id="helpQuestion" class="collapse">
