Se agrega texto para la creacion de videos

--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -67,6 +67,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Agregar nuevo video</h4>
+                    <h5>Se puede acceder a entre 8 y 12 vídeos de 3 minutos como máximo</h5>
                 </div>
                 <div class="modal-body">
                     <input type="text" class="form-control" placeholder="Nombre" required autofocus
@@ -152,7 +153,7 @@
                     <hr>
 
                     <h4>**Agregar Preguntas (5 preguntas con 3 posibles respuestas cada una)</h4>
-                    <a href="" data-toggle="collapse" data-target="#helpQuestion">
+                    <a href="" data-toggle="collapse" data-target="#helpQuestion" id="helpQuestions">
                         <i class="fa fa-info-circle"> Ayuda</i>
                     </a>
                     <div id="helpQuestion" class="collapse">
